--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
-import Header from '../components/Header.astro';
 ---
 
 <Layout title="Welcome to Astro.">
 	<Navbar />
-	<Header />
+	<main>
+		<h1>Contacto <span class="text-gradient">Astro</span></h1>
+	</main>
 </Layout>
