--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,16 @@
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-	<Navbar />
-	<Header />
+<Layout title="Xesc Fred i Clima">
+	<header>
+		<Navbar />
+	</header>
+	<main>
+		<Header />
+	</main>
+
+	<Footer />
 </Layout>
