--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -1,11 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../components/Navbar.astro';
+import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Contacto | Xesc Fred i Clima">
 	<Navbar />
 	<main>
 		<h1>Contacto <span class="text-gradient">Astro</span></h1>
 	</main>
+	<Footer />
 </Layout>
